translation-tool/inputs/source_meta/objects/GL_Segment__c.object
<CustomObject>
    <fields>
        <fullName>Business_Segment__c</fullName>
        <label>Business Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer Customer</fullName>
                    <label>Residential</label>
                </value>
                <value>
                    <fullName>SOHO</fullName>
                    <label>SME</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>GL Segments</relationshipLabel>
        <relationshipName>GL_Segments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transport_Name__c</fullName>
        <label>Transport Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Transport_Names</valueSetName>
        </valueSet>
    </fields>
    <label>GL Segment</label>
    <nameField>
        <label>GL Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Segments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>